# bodyguard

./: .gitignore  README.md  setup.cfg
src/bodyguard/: __init__.py  convert.py  dicts.py  dimension_reduction.py  distance.py  exceptions.py  gg.py  init.py  lists.py  pca.py  plot.py  predict.py  read_and_write.py  sanity_check.py  saving.py  strings.py  tools.py
