[metadata]
name = bodyguard
version = 0.0.6
author = Nicolaj Søndergaard Mühlbach
author_email = n.muhlbach@gmail.com
description = Heavy machinery for Python (tools, utilities, etc)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muhlbach/bodyguard
keywords = utilities, tools
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    = src
[options.packages.find]
where = src
